--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -37,5 +37,6 @@ body,
         padding:          5px 10px;
         border-radius:    6px;
         cursor:           pointer;
+        font-size: 18px;
     }
 }
