--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,6 +9,12 @@
 
 @import 'components/vueflow.scss';
 
+@import 'https://cdn.jsdelivr.net/npm/@vue-flow/core@1.34.1/dist/style.css';
+@import 'https://cdn.jsdelivr.net/npm/@vue-flow/core@1.34.1/dist/theme-default.css';
+@import 'https://cdn.jsdelivr.net/npm/@vue-flow/controls@latest/dist/style.css';
+@import 'https://cdn.jsdelivr.net/npm/@vue-flow/minimap@latest/dist/style.css';
+@import 'https://cdn.jsdelivr.net/npm/@vue-flow/node-resizer@latest/dist/style.css';
+
 html,
 body,
 #app {
@@ -23,6 +29,11 @@ body,
     -moz-osx-font-smoothing: grayscale;
     text-align:              center;
     color:                   #2c3e50;
+}
+
+.vue-flow__minimap {
+    transform: scale(75%);
+    transform-origin: bottom right;
 }
 
 .main-buttons {
